tests/expected_invalid_prove_without_authority.diag.out
<input>:7:5: error: 'prove' is only valid inside a function with 'proves'
        prove Receipt { count: 1 }
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
